--- a/example/src/index.less
+++ b/example/src/index.less
@@ -1,5 +1,6 @@
 @import '~rsuite/lib/styles/index.less';
 @import '~rsuite/lib/styles/themes/default/index.less';
+@import '../../node_modules/react-perfect-scrollbar/dist/css/styles.min.css';
 
 @nav-item-font-default-color: @B800;
 
